--- a/sass/utils/_fonts.scss
+++ b/sass/utils/_fonts.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "Nekst-Regular";
-  src: url("./fonts/Nekst-Regular.eot");
-  src: local("☺"), url("./fonts/Nekst-Regular.woff") format("woff"),
-    url("./fonts/Nekst-Regular.ttf") format("truetype"),
-    url("./fonts/Nekst-Regular.svg") format("svg");
+  src: url("fonts/Nekst-Regular.eot");
+  src: local("☺"), url("fonts/Nekst-Regular.woff") format("woff"),
+    url("fonts/Nekst-Regular.ttf") format("truetype"),
+    url("fonts/Nekst-Regular.svg") format("svg");
   font-weight: 400;
   font-style: normal;
 }
