--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@
 @import "./utils/normalize";
 @import "./utils/variables";
 @import "./utils/breakpoints";
-@import "./utils/fonts";
+// @import "./utils/fonts";
 
 // ==========| End Utils |========== \\
 
