--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: "Nekst-Regular";
   src: url("../fonts/Nekst-Regular.eot");
   src: local("☺"), url("../fonts/Nekst-Regular.woff") format("woff"),
@@ -6,4 +6,4 @@
     url("../fonts/Nekst-Regular.svg") format("svg");
   font-weight: 400;
   font-style: normal;
-}
+} */
